# continuum-hydra

./: DOCTOR_TEST.md  DOCTOR_TEST_REPORT.md  README.md  pyproject.toml
.hydra/launch/runs/launch-run-20260217132343/: report.json
.hydra/launch/runs/launch-run-20260217132806/: report.json
.hydra/launch/runs/launch-run-20260217133045/: report.json
.hydra/launch/runs/launch-run-20260217133218/: report.json
.hydra/launch/runs/launch-run-20260217133327/: report.json
.hydra/launch/runs/launch-run-20260217134111/: report.json
.hydra/reports/: doctor_20260217_070800.json  profile_20260217_105006.json  profile_20260217_110004.json
.hydra/state/: accelerate_latest.json
src/continuum/: cli.py  cli.py.save
src/continuum/accelerate/: __init__.py  cli.py  launcher.py  models.py  plan_builder.py  registry.py  reporting.py  system_cli.py  system_formatter.py  system_state.py  system_tuner.py
src/continuum/accelerate/actions/: __init__.py  cpu_governor.py  nvidia_persistence.py  process_priority.py
src/continuum/accelerate/plugins/: __init__.py  loader.py
src/continuum/accelerate/ui/: __init__.py  interactive.py
src/continuum/evals/: cli.py  models.py  runner.py
src/continuum/evals/adapters/: base.py  dummy.py  openai_compat.py
src/continuum/evals/graders/: rag.py
src/continuum/launch/: cli.py  launcher.py  plan_builder.py  registry.py  reporting.py
src/continuum/profiler/: analysis.py  benchmarks.py  cpu_benchmark.py  disk_benchmark.py  formatters.py  main.py  memory_bandwidth.py  remediation.py  static_profile.py
src/continuum/setup/: __init__.py  main.py
test_training/: train_100m_mmfine_reason.py
tests/: test_accelerate_cli.py  test_accelerate_registry.py  test_accelerate_reporting.py  test_accelerate_system_cli.py  test_analysis_bottleneck.py  test_cpu_benchmark.py  test_disk_benchmark.py  test_evals_cli.py  test_launch_runtime.py  test_memory_bandwidth.py  test_profile_main.py  test_profile_static.py  test_remediation.py  test_setup_main.py
tests/fixtures/: print_args.py
(+10 files in other folders)
