[project]
name = "continuum-intelligence"
version = "0.1.0"
description = "Continuum Hydra: performance-first ML systems toolkit with doctor diagnostics and profiling"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Continuum Intelligence" }]
keywords = ["ml", "pytorch", "cuda", "gpu", "performance", "infra", "diagnostics", "profiling", "benchmark"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: System :: Systems Administration",
  "Topic :: Software Development :: Testing",
]

dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "psutil>=5.9.0",
  "pynvml>=11.5.0",
  "packaging>=24.0",
]

[project.optional-dependencies]
profile = [
  "numpy>=1.24",
]

[project.scripts]
continuum = "continuum.cli:app"

[project.urls]
Homepage = "https://github.com/Continuum-Intelligence/continuum-hydra"
Repository = "https://github.com/Continuum-Intelligence/continuum-hydra"
Issues = "https://github.com/Continuum-Intelligence/continuum-hydra/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["continuum*"]

[tool.setuptools.package-data]
# If you later add JSON schemas, markdown templates, etc., they'll ship in the wheel.
# continuum = ["doctor/schemas/*.json", "doctor/templates/*.md"]
